--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-dotenv
+# COC Structure Project Dependencies
+# Python environment: conda activate python20251006
+
+# LangChain related
 langchain==1.1.0
-langchain_deepseek
-langchain_openai
-pydantic
-fastapi
-uvicorn
-pymysql
+langchain-core==1.1.3
+langchain-deepseek==1.0.1
+langgraph==1.0.4
+langgraph-checkpoint==3.0.1
+
+# Data validation
+pydantic==2.12.5
+
+# Database
+PyMySQL==1.1.2
+
+# Web framework (FastAPI)
+fastapi==0.125.0
+uvicorn==0.38.0
+
+# HTTP requests
+requests==2.32.5
+
+# Environment variables
+python-dotenv==1.2.1
