更改连接至云数据库

--- a/src/agent/.env
+++ b/src/agent/.env
@@ -5,8 +5,8 @@ DEEPSEEK_URL=https://api.deepseek.com
 DEEPSEEK_API_KEY=sk-13049d9282c944fca6734685252932c1
 
 # MySQL 数据库配置
-HOST=localhost
-USER=root
-MYSQL_PW=123456
-DB_NAME=coc_db
-PORT=3306
+HOST=mysql6.sqlpub.com
+USER=wower333
+MYSQL_PW=oeSGTrDxZiJWAs4X
+DB_NAME=coc_database
+PORT=3311
